--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,3 +1,37 @@
+@font-face {
+    font-family: "SF Display";
+    src: url(./fonts/SF-Pro-Display-Regular.otf);
+    font-weight: 400;
+    font-style: normal;
+  }
+  @font-face {
+    font-family: "SF Display";
+    src: url(./fonts/SF-Pro-Display-Bold.otf);
+    font-weight: 700;
+    font-style: normal;
+  }
+  @font-face {
+    font-family: "SF Text";
+    src: url(./fonts/SF-Pro-Text-Regular.otf);
+    font-weight: 400;
+    font-style: normal;
+  }
+  @font-face {
+    font-family: "SF Text";
+    src: url(./fonts/SF-Pro-Text-Semibold.otf);
+    font-weight: 600;
+    font-style: normal;
+  }
+  @font-face {
+    font-family: "SF Text";
+    src: url(./fonts/SF-Pro-Text-Bold.otf);
+    font-weight: 700;
+    font-style: normal;
+  }
+  
+*{
+    font-family: 'SF Display', sans-serif;
+}
 body{
     width: 100%;
     height: 100vh;
@@ -18,18 +52,29 @@ body{
             width: 1200px;
             text-align: center;
             margin: 30px 0px;
+            em{
+                color: rgb(26, 114, 32);
+                font-weight: 700;
+            }
         }
         h1{
             font-size: 72px;
-            font-weight: bold;
+            font-weight: 700;
         }
         
     }
+
+    #result_news{
+        font-size: 20px;
+        color: rgb(135, 40, 40);
+    }
+
     form{
         display: flex;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
-        margin: 30px 0px;
+        margin: 0px 0px 30px 0px;
         
         input{
             border-radius: 10px;
