--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,119 +1,89 @@
-@font-face {
-    font-family: "SF Display";
-    src: url(../fonts/SF-Pro-Display-Regular.otf);
-    font-weight: 400;
-    font-style: normal;
+body {
+  width: 100%;
+  height: 100vh;
+  font-family: "SF Text", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    font-family: "SF Display", sans-serif;
   }
-  @font-face {
-    font-family: "SF Display";
-    src: url(./fonts/SF-Pro-Display-Bold.otf);
-    font-weight: 700;
-    font-style: normal;
-  }
-  @font-face {
-    font-family: "SF Text";
-    src: url(./fonts/SF-Pro-Text-Regular.otf);
-    font-weight: 400;
-    font-style: normal;
-  }
-  @font-face {
-    font-family: "SF Text";
-    src: url(./fonts/SF-Pro-Text-Semibold.otf);
-    font-weight: 600;
-    font-style: normal;
-  }
-  @font-face {
-    font-family: "SF Text";
-    src: url(./fonts/SF-Pro-Text-Bold.otf);
-    font-weight: 700;
-    font-style: normal;
-  }
-
-*{
-    font-family: 'SF Display', sans-serif !important;
-}
-body{
+  > div {
+    height: calc(100% - 60px);
     width: 100%;
-    height: 100vh;
-    > div{
-        height: calc(100% - 60px);
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        ul{
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-        }
-        p{
-            font-size: 34px;
-            max-width: 1200px;
-            text-align: center;
-            margin: 30px 0px;
-            em{
-                color: rgb(26, 114, 32);
-                font-weight: 700;
-            }
-            @media screen and (max-width: 768px){
-                font-size: 24px; 
-            }
-        }
-        h1{
-            font-size: 72px;
-            text-align: center;
-            font-weight: 700;
-            @media screen and (max-width: 768px){
-                font-size: 34px; 
-            }
-        }
-        
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    ul {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
     }
+    p {
+      font-size: 34px;
+      max-width: 1200px;
+      text-align: center;
+      margin: 30px 0px;
+      em {
+        color: rgb(26, 114, 32);
+        font-weight: 700;
+      }
+      @media screen and (max-width: 768px) {
+        font-size: 24px;
+      }
+    }
+    h1 {
+      font-size: 72px;
+      text-align: center;
+      font-weight: 700;
+      @media screen and (max-width: 768px) {
+        font-size: 34px;
+      }
+    }
+  }
 
-    #result_news{
-        font-size: 20px;
-        color: rgb(135, 40, 40);
-    }
+  #result_news {
+    font-size: 20px;
+    color: rgb(135, 40, 40);
+  }
 
-    form{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        margin: 0px 0px 30px 0px;
-        
-        input{
-            border-radius: 10px;
-            border: 1px solid #000;
-            padding: 10px;
+  form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0px 0px 30px 0px;
 
-        }
-        button{
-            border-radius: 10px;
-            border: 1px solid #000;
-            padding: 10px;
-            background-color: #000;
-            color: #fff;
-            font-weight: bold;
-            cursor: pointer;
-            margin-left: 5px;
-        }
+    input {
+      border-radius: 10px;
+      border: 1px solid #000;
+      padding: 10px;
     }
-    footer{
-        width: 100%;
-        height: 60px;
-        text-align: center;
-        font-size: 1.5em;
-        display: flex;
-        gap: 20px;
-        align-items: center;
-        justify-content: center;
-        font-size: 14px;
+    button {
+      border-radius: 10px;
+      border: 1px solid #000;
+      padding: 10px;
+      background-color: #000;
+      color: #fff;
+      font-weight: bold;
+      cursor: pointer;
+      margin-left: 5px;
     }
+  }
+  footer {
+    width: 100%;
+    height: 60px;
+    text-align: center;
+    font-size: 1.5em;
+    display: flex;
+    gap: 20px;
+    align-items: center;
+    justify-content: center;
+    font-size: 14px;
+  }
 }
-
-
-
-
-
