--- a/styles/main.scss
+++ b/styles/main.scss
@@ -4,6 +4,14 @@ body {
   font-family: "SF Text", sans-serif;
   font-weight: 400;
   font-style: normal;
+  overflow: auto;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+  display: flex;
+  flex-direction: column;
+  &::-webkit-scrollbar {
+    display: none;
+  }
   h1,
   h2,
   h3,
@@ -13,79 +21,98 @@ body {
     font-family: "SF Display", sans-serif;
     letter-spacing: 3px;
   }
-  .main-container {
-    height: calc(100% - 60px);
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    ul {
+
+  .main-header-container {
+    background-image: url("../images/headerBackground.svg");
+    object-fit: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100vw;
+    height: 100vh;
+    position: relative;
+    article {
+      position: relative;
+    }
+    .header-background-filter {
+      position: absolute;
+      height: 100vh;
+      width: 100vw;
+      background-color: rgba(35, 2, 46, 0.4);
+      pointer-events: none;
+    }
+    .main-nav-container {
+      height: 25%;
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-start;
+      padding: 3rem;
+      .logo-container {
+        .logo {
+          img {
+            height: 7.25rem;
+          }
+        }
+      }
+      .nav-container {
+        ul {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          li {
+            font-family: "Retroica";
+            font-style: normal;
+            font-weight: 400;
+            font-size: 20px;
+            line-height: 36px;
+            color: #ffffff;
+            margin-right: 2rem;
+            text-transform: uppercase;
+            &.profil {
+              background-color: #beaee2;
+              padding: 0.3rem 2rem;
+              border-radius: 20px;
+            }
+          }
+        }
+      }
+    }
+    .main-title-container {
+      height: 55%;
       display: flex;
       justify-content: center;
-      gap: 20px;
-    }
-    p {
-      font-size: 34px;
-      width: 80vw;
-      letter-spacing: 2px;
-      text-align: center;
-      margin: 30px 0px;
-      em {
-        color: rgb(26, 114, 32);
-        font-weight: 700;
+      padding: 3rem 0;
+      .title-container {
+        font-family: "Retroica";
+        font-style: normal;
+        font-weight: 400;
+        font-size: 96px;
+        line-height: 96px;
+        text-transform: uppercase;
+        color: rgba(249, 249, 249, 0.75);
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        p {
+          width: 100vw;
+          .title-underline {
+            text-decoration: underline;
+            text-underline-position: from-font;
+          }
+        }
+        p:first-child {
+          padding-left: 10%;
+        }
+        p:nth-child(2) {
+          padding-left: 30%;
+        }
       }
-      @media screen and (max-width: 768px) {
-        font-size: 24px;
-      }
     }
-    h1 {
-      font-size: 72px;
-      text-align: center;
-      font-weight: 700;
-      @media screen and (max-width: 768px) {
-        font-size: 34px;
-      }
+    .scroll-down-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 20%;
     }
-  }
-
-  #result_news {
-    font-size: 20px;
-    color: rgb(135, 40, 40);
-  }
-
-  form {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 0px 0px 30px 0px;
-
-    input {
-      border-radius: 10px;
-      border: 1px solid #000;
-      padding: 10px;
-    }
-    button {
-      border-radius: 10px;
-      border: 1px solid #000;
-      padding: 10px;
-      background-color: #000;
-      color: #fff;
-      font-weight: bold;
-      cursor: pointer;
-      margin-left: 5px;
-    }
-  }
-  footer {
-    width: 100%;
-    height: 60px;
-    text-align: center;
-    font-size: 1.5em;
-    display: flex;
-    gap: 20px;
-    align-items: center;
-    justify-content: center;
-    font-size: 14px;
   }
 }
