--- a/styles/main.scss
+++ b/styles/main.scss
@@ -36,8 +36,8 @@ body {
     }
     .header-background-filter {
       position: absolute;
-      height: 100vh;
-      width: 100vw;
+      width: 100%;
+      height: 100%;
       background-color: rgba(35, 2, 46, 0.4);
       pointer-events: none;
     }
