--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,7 +1,7 @@
 body {
   width: 100%;
   height: 100vh;
-  font-family: "SF Text", sans-serif;
+  font-family: "Neue Plak", sans-serif;
   font-weight: 400;
   font-style: normal;
   h1,
@@ -10,83 +10,68 @@ body {
   h4,
   h5,
   h6 {
-    font-family: "SF Display", sans-serif;
+    font-family: "Retroica", sans-serif;
   }
-  > div {
-    height: calc(100% - 60px);
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    ul {
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-    }
-    p {
+  h1 {
+    font-size: 96px;
+    font-weight: 700;
+    @media screen and (max-width: 768px) {
       font-size: 34px;
-      max-width: 1200px;
-      text-align: center;
-      margin: 30px 0px;
-      em {
-        color: #54d077;
-        font-weight: 700;
-      }
-      @media screen and (max-width: 768px) {
-        font-size: 24px;
-      }
-    }
-    h1 {
-      font-size: 72px;
-      text-align: center;
-      font-weight: 700;
-      @media screen and (max-width: 768px) {
-        font-size: 34px;
-      }
     }
   }
-
-  #result_news {
-    font-size: 20px;
-    color: rgb(135, 40, 40);
-  }
-
-  form {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 0px 0px 30px 0px;
-
-    input {
-      border-radius: 10px;
-      border: 1px solid #000;
-      padding: 10px;
+  p {
+    font-size: 25px;
+    text-align: justify;
+    em {
+      color: #54d077;
+      font-weight: 800;
     }
-    button {
-      border-radius: 10px;
-      border: 1px solid #000;
-      padding: 10px;
-      background-color: #000;
-      color: #fff;
-      font-weight: bold;
-      cursor: pointer;
-      margin-left: 5px;
+    @media screen and (max-width: 768px) {
+      font-size: 24px;
     }
   }
-  footer {
-    width: 100%;
-    height: 60px;
-    text-align: center;
-    font-size: 1.5em;
-    display: flex;
-    gap: 20px;
-    align-items: center;
-    justify-content: center;
-    font-size: 14px;
+  a {
+    color: #54d077;
+    text-decoration: none;
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+  main section:not(section.background),header,footer{
+    max-width: 1620px;
+    margin: 0 auto;
   }
 }
+
+#result_news {
+  font-size: 20px;
+  color: rgb(135, 40, 40);
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0px 0px 30px 0px;
+
+  input {
+    border-radius: 10px;
+    border: 1px solid #000;
+    padding: 10px;
+  }
+  button {
+    border-radius: 10px;
+    border: 1px solid #000;
+    padding: 10px;
+    background-color: #000;
+    color: #fff;
+    font-weight: bold;
+    cursor: pointer;
+    margin-left: 5px;
+  }
+}
+
 .modal-form {
   overflow: auto;
   -ms-overflow-style: none;
@@ -110,6 +95,7 @@ body {
     cursor: pointer;
   }
 }
+
 .btn-enquete {
   margin-top: 1rem;
   border: #54d077 solid 2px;
@@ -121,54 +107,43 @@ body {
   color: #54d077;
   border: black solid 2px;
 }
-
-.container{
-  min-height: auto;
-  height: auto;
-  width: auto;
-  max-width: 1200px;
-  display: block;
-  margin: 0 auto;
-  p{
-    text-align: justify;
-  }
   
-  .mention-legal, .conf{
-   h2{
+.mention-legal, .conf{
+  h2{
 
-    font-size: 1.5rem;
-    font-weight: 700;
-    margin-top: 3rem;
-    margin-bottom: 1rem;
-   }
-   h3{
-    font-size: 1.2rem;
-    font-weight: 700;
-    margin-bottom: 1rem;
-   }
-   h4{
-    font-size: 1.2rem;
-    font-weight: 700;
-    margin-bottom: 1rem;
-   }
-   p{
-    font-size: 1rem;
-    font-weight: 400;
-    margin-bottom: 1rem;
-    line-height: 20px;
-   }
-   p:last-child{
-    margin-bottom: 2rem;
-   }
-   ul{
-    ul{
-      list-style-type: disc;
-    }
-    display: block;
-   }
+  font-size: 1.5rem;
+  font-weight: 700;
+  margin-top: 3rem;
+  margin-bottom: 1rem;
   }
-
-  .mention-legal{
-    width: 100%;
+  h3{
+  font-size: 1.2rem;
+  font-weight: 700;
+  margin-bottom: 1rem;
+  }
+  h4{
+  font-size: 1.2rem;
+  font-weight: 700;
+  margin-bottom: 1rem;
+  }
+  p{
+  font-size: 1rem;
+  font-weight: 400;
+  margin-bottom: 1rem;
+  line-height: 20px;
+  }
+  p:last-child{
+  margin-bottom: 2rem;
+  }
+  ul{
+  ul{
+    list-style-type: disc;
+  }
+  display: block;
   }
 }
+
+.mention-legal{
+  width: 100%;
+}
+
