--- a/styles/fonts.scss
+++ b/styles/fonts.scss
@@ -1,7 +1,7 @@
 // import police title (Retroica)
 @font-face {
   font-family: "Retroica";
-  src: url(/fonts/Retroica/Retroica.ttf);
+  src: url(../fonts/Retroica/Retroica.ttf);
   font-weight: 400;
   font-style: normal;
 }
@@ -9,13 +9,13 @@
 // Import police title (Neue Plak)
 @font-face {
   font-family: "Neue Plak";
-  src: url(/fonts/Neue\ Plak/NeuePlakRegular.ttf);
+  src: url(../fonts/Neue\ Plak/NeuePlakRegular.ttf);
   font-weight: 400;
   font-style: normal;
 }
 @font-face {
   font-family: "Neue Plak";
-  src: url(/fonts/Neue\ Plak/NeuePlakBold.ttf);
+  src: url(../fonts/Neue\ Plak/NeuePlakBold.ttf);
   font-weight: 800;
   font-style: normal;
 }
