mise à jours appelle des images

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -573,7 +573,7 @@ main {
       }
 
       .img1 {
-        background-image: url("./images/Rectangle57.png");
+        background-image: url(/images/Rectangle57.png);
         background-position: center;
         background-size: cover;
         border-radius: 20px;
@@ -585,7 +585,7 @@ main {
       }
 
       .img2 {
-        background: url("./images/Rectangle58.png");
+        background-image: url(/images/Rectangle58.png);
         background-position: center top;
         background-size: cover;
         border-radius: 20px;
@@ -599,7 +599,7 @@ main {
       }
 
       .img3 {
-        background: url("./images/Rectangle59.png");
+        background-image: url(/images/Rectangle59.png);
         background-position: center;
         background-size: cover;
         border-radius: 20px;
