mise à jours dosser fonts

--- a/styles/fonts.scss
+++ b/styles/fonts.scss
@@ -9,13 +9,13 @@
 // Import police title (Neue Plak)
 @font-face {
   font-family: "Neue Plak";
-  src: url(../fonts/Neue\ Plak/NeuePlakRegular.ttf);
+  src: url(../fonts/NeuePlak/NeuePlakRegular.ttf);
   font-weight: 400;
   font-style: normal;
 }
 @font-face {
   font-family: "Neue Plak";
-  src: url(../fonts/Neue\ Plak/NeuePlakBold.ttf);
+  src: url(../fonts/NeuePlak/NeuePlakBold.ttf);
   font-weight: 800;
   font-style: normal;
 }
