--- a/styles/main.scss
+++ b/styles/main.scss
@@ -25,8 +25,6 @@ body {
 
   p {
     font-size: 18px;
-    text-align: justify;
-
     em {
       color: #54d077;
       font-weight: 800;
@@ -399,7 +397,7 @@ form {
   -ms-overflow-style: none;
   scrollbar-width: none;
   position: absolute;
-  z-index: 2;
+  z-index: 5;
   top: 0;
   background-color: rgba($color: #000000, $alpha: 0.8);
   width: 100vw;
@@ -491,7 +489,7 @@ main {
     margin: 0 auto;
 
     @media screen and (max-width: 768px) {
-      width: 320px;
+      width: 100%;
     }
 
     .main-conteneur {
@@ -499,9 +497,9 @@ main {
       position: relative;
       height: 350px;
       @media screen and (max-width: 768px) {
-        width: 320px;
-        margin-top: 0;
-        height: 375px;
+        width: 100%;
+        margin-top: 80;
+        height: auto;
        }
 
       >div {
@@ -511,6 +509,7 @@ main {
 
         @media screen and (max-width:768px) {
           flex-direction: column;
+          height: auto;
         }
       }
 
@@ -521,10 +520,10 @@ main {
 
         @media screen and (max-width: 768px) {
           position: relative;
-          text-align: center;
-          font-size: 23px;
+          font-size: 25px;
           margin-bottom: 10px;
           margin-top: 10px;
+          padding-left: 10px;
           letter-spacing: 10px;
         }
       }
@@ -533,7 +532,7 @@ main {
         color: #B0B864;
       }
 
-      .droite {
+      .left {
         right: 25px;
         z-index: 2;
         top: 10px;
@@ -541,10 +540,11 @@ main {
         @media screen and (max-width: 768px) {
           right: auto;
           z-index: 0;
+          top: 0;
         }
       }
 
-      .gauche {
+      .right {
         left: 50px;
         z-index: 2;
         top: 10px;
@@ -552,6 +552,7 @@ main {
         @media screen and (max-width: 768px) {
           left: auto;
           z-index: 0;
+          top: 0;
         }
       }
 
@@ -561,53 +562,31 @@ main {
 
       .beige {
         color: #D8B9AC;
-        @media screen and (max-width: 768px) {
-        margin-top: 125px;
-        }
       }
 
       .conteneur-img {
         width: 50%;
         position: relative;
-        border-radius: 25px;
+        background-position: center;
+        background-size: cover;
+        border-radius: 20px;
+        @media screen and (max-width: 768px) {
+          height: 250px;
+          width: 100%;
+          border-radius: 0;
+        }
       }
 
       .img1 {
         background-image: url(/images/Rectangle57.png);
-        background-position: center;
-        background-size: cover;
-        border-radius: 20px;
-        @media screen and (max-width: 768px) {
-          height: 150px;
-          width: 100%;
-          border-radius: 0;
-        }
       }
 
       .img2 {
         background-image: url(/images/Rectangle58.png);
-        background-position: center top;
-        background-size: cover;
-        border-radius: 20px;
-        @media screen and (max-width: 768px) {
-          background-position: center;
-          height: 150px;
-          min-height: 200px;
-          width: 100%;
-          border-radius: 0;
-        }
       }
 
       .img3 {
         background-image: url(/images/Rectangle59.png);
-        background-position: center;
-        background-size: cover;
-        border-radius: 20px;
-        @media screen and (max-width: 768px) {
-          height: 150px;
-          width: 100%;
-          border-radius: 0;
-        }
       }
 
       .text {
@@ -620,7 +599,7 @@ main {
 
         @media screen and (max-width: 768px) {
           width: 100%;
-          padding-top: 0px;
+          padding: 30px 0px;
           display: flex;
           flex-direction: column;
           align-items: center;
@@ -637,7 +616,7 @@ main {
 
         >div {
           width: 70%;
-          margin-top: 10px;
+          margin-top: 70px;
 
           p:last-child {
             margin-top: 20px;
@@ -645,24 +624,36 @@ main {
           }
           p{
             @media screen and (max-width:728px) {
-              font-size: 13px;
+              font-size: 16px;
             }
+          }
+          @media screen and (max-width:728px) {
+            width: 90%;
           }
 
         }
       }
   }
 
-  
 
   .main-conteneur:last-child{
     margin-bottom: 100px;
   }
 
+  .main-conteneur:nth-child(2){
+    > div{
+      flex-direction: row-reverse;
+      @media screen and (max-width:728px) {
+        flex-direction:  column;
+      }
+    }
+    
+  }
+
   }
   span{
     border-bottom: 10px solid;
-    @media screen and (max-width:728px) {
+    @media screen and (max-width:768px) {
       border-bottom: none;
     }
   }
