--- a/styles/main.scss
+++ b/styles/main.scss
@@ -118,7 +118,7 @@ header{
       }
     }
     .btn{
-      background-color: #0e5656;
+      background-color: #106666;
       transition: all 0.5s ease-in-out;
     }
   }
@@ -232,7 +232,13 @@ main{
         }
 
       }
+      .privacy-policy{
+        h2{
+          font-size: 70px;
+        }
     }
+    }
+    
     @media screen and (max-width: 768px) {
       
       height: 900px;
