--- a/styles/main.scss
+++ b/styles/main.scss
@@ -12,7 +12,7 @@ body {
   h4,
   h5,
   h6 {
-    font-family: "Retroica", sans-serif;
+    font-family: "copacanaba", sans-serif;
   }
 
   h1 {
@@ -216,7 +216,6 @@ main{
         transform: translate(-50%,-50%);
         width: 1210px;
         h1,h2{
-          font-family: "Retroica", sans-serif;
           font-weight: 700;
           font-size: 96px;
           color: #fff;
