--- a/styles/fonts.scss
+++ b/styles/fonts.scss
@@ -1,14 +1,6 @@
-// Import police title (Neue Plak)
 @font-face {
   font-family: "Neue Plak";
-  src: url(../fonts/NeuePlak/NeuePlakRegular.ttf);
+  src: url("http://fonts.cdnfonts.com/css/neue-plak");
   font-weight: 400;
   font-style: normal;
 }
-@font-face {
-  font-family: "Neue Plak";
-  src: url(../fonts/NeuePlak/NeuePlakBold.ttf);
-  font-weight: 800;
-  font-style: normal;
-}
-
