--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,10 +1,10 @@
 body {
   width: 100%;
-  min-height: 100vh;
   font-family: "Neue Plak", sans-serif;
   font-weight: 400;
   font-style: normal;
   background-color: #f9f9f9;
+  position: relative;
 
   h1,
   h2,
@@ -13,5 +13,133 @@ body {
   h5,
   h6 {
     font-family: "copacanaba", sans-serif;
+  }
+}
+.header-container {
+  width: 100%;
+  position: fixed;
+  top: 0;
+  display: flex;
+  justify-content: space-between;
+  color: white;
+  padding: 1.2rem 7rem;
+
+  h1 {
+    position: relative;
+  }
+
+  nav {
+    .nav-container {
+      display: flex;
+      position: relative;
+      width: 40vw;
+      justify-content: space-around;
+      font-family: "Neue Plak", sans-serif;
+      font-size: 20px;
+      font-weight: 400;
+      text-transform: uppercase;
+      line-height: 36px;
+      color: white;
+      height: fit-content;
+      margin: 0;
+    }
+  }
+  .filter-background {
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 100vh;
+    width: 100%;
+    pointer-events: none;
+    background: linear-gradient(
+      180deg,
+      rgba(0, 0, 0, 0.4) 0%,
+      rgba(0, 0, 0, 0) 38.01%
+    );
+  }
+}
+
+main {
+  .home-container {
+    height: 100vh;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-image: url(/images/imgBackground/home-background.webp);
+
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    padding: 0 9rem;
+
+    article {
+      max-width: 60vw;
+      margin-top: 3rem;
+      h2 {
+        font-family: "Copacabana", sans-serif;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 60px;
+        line-height: 70px;
+        letter-spacing: 0.5rem;
+        text-transform: uppercase;
+        color: #ffffff;
+        margin-bottom: 2rem;
+      }
+      p {
+        max-width: 30vw;
+        font-family: "Neue Plak", sans-serif;
+        font-style: normal;
+        font-weight: 600;
+        font-size: 20px;
+        line-height: 36px;
+        text-transform: uppercase;
+        color: #ffffff;
+        margin-bottom: 1.5rem;
+      }
+      button {
+        font-family: "Neue Plak", sans-serif;
+        font-style: normal;
+        font-weight: 600;
+        font-size: 20px;
+        line-height: 36px;
+        text-align: center;
+        text-transform: uppercase;
+        color: #093a3a;
+        background: #bcf6f6;
+        border-radius: 20px;
+        padding: 0.4rem 2.5rem;
+      }
+    }
+  }
+
+  .who-are-we {
+    height: 183vh;
+    width: 100%;
+    background-image: linear-gradient(
+        rgba(255, 255, 255, 0.9),
+        rgba(255, 255, 255, 0.9)
+      ),
+      url("../images/imgBackground/section-background.webp");
+    background-repeat: repeat;
+    background-position: center;
+    background-size: cover;
+
+    .we-engage {
+      display: flex;
+      img {
+        width: 45vw;
+        height: 60vh;
+        object-position: center;
+        border-radius: 1.5rem;
+        object-fit: cover;
+        margin: 5rem 0 5rem 5rem;
+      }
+      .we-engage-content {
+        margin: 5rem;
+        width: 40vw;
+      }
+    }
   }
 }
