--- a/styles/main.scss
+++ b/styles/main.scss
@@ -32,7 +32,7 @@ body {
     .nav-container {
       display: flex;
       position: relative;
-      width: 40vw;
+      width: 30vw;
       justify-content: space-around;
       font-family: "Neue Plak", sans-serif;
       font-size: 20px;
@@ -41,7 +41,7 @@ body {
       line-height: 36px;
       color: white;
       height: fit-content;
-      margin: 0;
+      margin: 0 5rem 0 0;
     }
   }
   .filter-background {
