--- a/styles/fonts.scss
+++ b/styles/fonts.scss
@@ -4,3 +4,25 @@
   font-weight: 400;
   font-style: normal;
 }
+
+body {
+  font-family: "Neue Plak", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  position: relative;
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    font-family: "copacanaba", sans-serif;
+  }
+  p {
+    font-family: "Neue Plak", sans-serif;
+    font-weight: 400;
+    font-size: 1.5rem;
+    line-height: 1.5;
+  }
+}
