--- a/styles/main.scss
+++ b/styles/main.scss
@@ -15,6 +15,7 @@ body {
     font-family: "copacanaba", sans-serif;
   }
 }
+
 .header-container {
   width: 100%;
   position: fixed;
@@ -44,6 +45,7 @@ body {
       margin: 1rem 5rem 0 0;
     }
   }
+
   .filter-background {
     position: absolute;
     top: 0;
@@ -51,11 +53,9 @@ body {
     height: 100vh;
     width: 100%;
     pointer-events: none;
-    background: linear-gradient(
-      180deg,
-      rgba(0, 0, 0, 0.4) 0%,
-      rgba(0, 0, 0, 0) 38.01%
-    );
+    background: linear-gradient(180deg,
+        rgba(0, 0, 0, 0.4) 0%,
+        rgba(0, 0, 0, 0) 38.01%);
   }
 }
 
@@ -76,6 +76,7 @@ main {
     article {
       max-width: 60vw;
       margin-top: 3rem;
+
       h2 {
         line-height: 70px;
         font-size: 60px;
@@ -84,6 +85,7 @@ main {
         color: #ffffff;
         margin-bottom: 2rem;
       }
+
       p {
         max-width: 30vw;
         font-family: "Neue Plak", sans-serif;
@@ -95,6 +97,7 @@ main {
         color: #ffffff;
         margin-bottom: 1.5rem;
       }
+
       button {
         font-family: "Neue Plak", sans-serif;
         font-style: normal;
@@ -114,10 +117,8 @@ main {
   .who-are-we {
     height: 183vh;
     width: 100%;
-    background-image: linear-gradient(
-        rgba(255, 255, 255, 0.9),
-        rgba(255, 255, 255, 0.9)
-      ),
+    background-image: linear-gradient(rgba(255, 255, 255, 0.9),
+        rgba(255, 255, 255, 0.9)),
       url("../images/imgBackground/section-background.webp");
     background-repeat: repeat;
     background-position: center;
@@ -125,6 +126,7 @@ main {
 
     .we-engage {
       display: flex;
+
       img {
         width: 45vw;
         height: 60vh;
@@ -133,9 +135,112 @@ main {
         object-fit: cover;
         margin: 5rem 0 5rem 5rem;
       }
+
       .we-engage-content {
         margin: 5rem;
         width: 40vw;
+      }
+    }
+  }
+
+  .return {
+    height: 15vh;
+    @media screen and (max-width: 768px) {
+      height: 10vh;
+    }
+    .mobile{
+      display: none;
+      @media screen and (max-width: 768px) {
+          display: flex;
+      }
+      .logo{
+        width: 60%;
+        display: flex;
+        justify-content: flex-end;
+      }
+      .menu{
+        width: 40%;
+        display: flex;
+        justify-content: flex-end;
+      }
+    }
+    .computer{
+      @media screen and (max-width: 768px) {
+        display: none;
+      }
+    }
+    h3{
+      font-size: 15px;
+    }
+  }
+
+  .error {
+    height: 90vh;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    @media screen and (max-width: 768px) {
+      flex-direction: column;
+      height: 90vh;
+    }
+
+    .text {
+      width: 50%;
+      display: flex;
+      flex-direction: column;
+      padding-left: 150px;
+      @media screen and (max-width: 768px) {
+        width: 100%;
+        height: 40%;
+        padding-left: 0;
+        align-items: center;
+      }
+
+      h1 {
+        color: #106666;
+        font-size: 70px;
+        @media screen and (max-width: 768px) {
+          font-size: 22px;
+        }
+      }
+
+      h4 {
+        color: #041B1B;
+        font-size: 20px;
+        font-family: "Neue Plak", sans-serif;
+        @media screen and (max-width: 768px) {
+          font-weight: normal;
+        }
+      }
+
+      p{
+        line-height: 25px;
+      }
+
+      input {
+        border-radius: 10px;
+        background-color: #093a3a;
+        width: 300px;
+        height: 30px;
+        color: #f9f9f9;
+        margin-top: 100px;
+        cursor: pointer;
+        @media screen and (max-width: 768px) {
+          margin-top: 30px;
+        }
+      }
+    }
+
+    .img {
+      width: 50%;
+      background-image: url(/images/imgContainers/Norvège.jpeg);
+      background-size: auto 100%;
+      background-repeat: no-repeat;
+      @media screen and (max-width: 768px) {
+        width: 100%;
+        height: 50%;
+        background-size: 80% 80%; 
+        background-position: center;
       }
     }
   }
