--- a/styles/main.scss
+++ b/styles/main.scss
@@ -24,6 +24,7 @@ body {
   justify-content: space-between;
   color: white;
   padding: 1.2rem 7rem;
+  z-index: 9999;
 
   h1 {
     position: relative;
@@ -43,6 +44,7 @@ body {
       color: white;
       height: fit-content;
       margin: 1rem 5rem 0 0;
+      text-shadow: 0px 0px 20px black;
     }
   }
 
@@ -53,9 +55,11 @@ body {
     height: 100vh;
     width: 100%;
     pointer-events: none;
-    background: linear-gradient(180deg,
-        rgba(0, 0, 0, 0.4) 0%,
-        rgba(0, 0, 0, 0) 38.01%);
+    background: linear-gradient(
+      180deg,
+      rgba(0, 0, 0, 0.4) 0%,
+      rgba(0, 0, 0, 0) 38.01%
+    );
   }
 }
 
@@ -119,8 +123,10 @@ main {
   .who-are-we {
     height: 183vh;
     width: 100%;
-    background-image: linear-gradient(rgba(255, 255, 255, 0.9),
-        rgba(255, 255, 255, 0.9)),
+    background-image: linear-gradient(
+        rgba(255, 255, 255, 0.9),
+        rgba(255, 255, 255, 0.9)
+      ),
       url("../images/imgBackground/section-background.webp");
     background-repeat: repeat;
     background-position: center;
@@ -221,28 +227,28 @@ main {
     @media screen and (max-width: 768px) {
       height: 10vh;
     }
-    .mobile{
+    .mobile {
       display: none;
       @media screen and (max-width: 768px) {
-          display: flex;
+        display: flex;
       }
-      .logo{
+      .logo {
         width: 60%;
         display: flex;
         justify-content: flex-end;
       }
-      .menu{
+      .menu {
         width: 40%;
         display: flex;
         justify-content: flex-end;
       }
     }
-    .computer{
+    .computer {
       @media screen and (max-width: 768px) {
         display: none;
       }
     }
-    h3{
+    h3 {
       font-size: 15px;
     }
   }
@@ -278,7 +284,7 @@ main {
       }
 
       h4 {
-        color: #041B1B;
+        color: #041b1b;
         font-size: 20px;
         font-family: "Neue Plak", sans-serif;
         @media screen and (max-width: 768px) {
@@ -286,7 +292,7 @@ main {
         }
       }
 
-      p{
+      p {
         line-height: 25px;
       }
 
@@ -312,7 +318,7 @@ main {
       @media screen and (max-width: 768px) {
         width: 100%;
         height: 50%;
-        background-size: 80% 80%; 
+        background-size: 80% 80%;
         background-position: center;
       }
     }
