--- a/styles/global.scss
+++ b/styles/global.scss
@@ -26,3 +26,50 @@ body {
     line-height: 1.5;
   }
 }
+
+.header-container {
+  width: 100%;
+  position: fixed;
+  top: 0;
+  display: flex;
+  justify-content: space-between;
+  color: white;
+  padding: 1.2rem 7rem;
+  z-index: 9999;
+
+  h1 {
+    position: relative;
+  }
+
+  nav {
+    .nav-container {
+      display: flex;
+      position: relative;
+      width: 35vw;
+      justify-content: space-around;
+      font-family: "Neue Plak", sans-serif;
+      font-size: 20px;
+      font-weight: 400;
+      text-transform: uppercase;
+      line-height: 36px;
+      color: white;
+      height: fit-content;
+      margin: 1rem 5rem 0 0;
+      text-shadow: 0px 0px 20px black;
+    }
+  }
+
+  .filter-background {
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 100vh;
+    width: 100%;
+    pointer-events: none;
+    background: linear-gradient(
+      180deg,
+      rgba(0, 0, 0, 0.4) 0%,
+      rgba(0, 0, 0, 0) 38.01%
+    );
+  }
+}
